samples/_failures_safe/1761326277_09395f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ec1082b6.c: In function ‘main’:
./samples/SAFE/__tmp_ec1082b6.c:177:12: error: missing terminating " character
  177 |     printf("%-12s %-12s %s\n
      |            ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_ec1082b6.c:177:5: error: expected expression at end of input
  177 |     printf("%-12s %-12s %s\n
      |     ^~~~~~
./samples/SAFE/__tmp_ec1082b6.c:177:5: error: expected declaration or statement at end of input
